# OmniECS

./: LICENSE  README.md  pyproject.toml
src/omniecs/: managers.py  system.py  types.py  world.py
tests/: test_component_manager.py  test_entity_manager.py  test_event_manager.py  test_render_manager.py  test_resource_manager.py  test_system.py  test_system_manager.py  test_world.py
